# chat

./: .gitignore  CMakeLists.txt
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/model/: friendmodel.hpp
src/client/: CMakeLists.txt
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/model/: friendmodel.cpp
